# android-cli-mac-x86-community

./: .gitignore  .mailmap  LICENSE  README.md  README.zh-TW.md  STATUS.md  pyproject.toml  test_api.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
notes/: install-cmd-dazzling-stream.md  m3-docs-search.md
scripts/: compare_cli_outputs.py
src/android_cli_mac_x86_community/: __init__.py  cli.py
src/android_cli_mac_x86_community/commands/: create.py  describe.py  docs.py  emulator.py  info.py  init.py  layout.py  run.py  screen.py  sdk.py  skills.py  update.py
src/android_cli_mac_x86_community/templates/compose_navigation/app/: build.gradle.kts.tmpl
src/android_cli_mac_x86_community/templates/empty_compose/: settings.gradle.kts.tmpl
src/android_cli_mac_x86_community/templates/empty_compose/app/: build.gradle.kts.tmpl
src/android_cli_mac_x86_community/tools/: _subprocess.py  adb.py  avdmanager.py  emulator.py  sdkmanager.py
src/android_cli_mac_x86_community/utils/: android_home.py  config.py  docs_index.py  docs_kb.py  layout_xml.py  scaffold.py  self_update.py  skills_repo.py  uiautomator.py
tests/: conftest.py  test_adb.py  test_adb_emulator_lookup.py  test_android_home.py  test_avdmanager.py  test_create.py  test_describe.py  test_docs.py  test_emulator_cmd.py  test_emulator_tool.py  test_info.py  test_init.py  test_layout_xml.py  test_run.py  test_scaffold.py  test_screen_resolve.py  test_sdk.py  test_sdkmanager.py  test_skills.py  test_subprocess_resolve.py  test_uiautomator.py  test_update.py
(+10 files in other folders)
